adapt architecture to a project, fix most of problems
