# Specs.Generated/openapi_v2.json
@@ -23,8 +23,11 @@
     "/connect/token": {
       "post": {
         "tags": [
-          "BankApi.Service.Beta"
+          "OAuth"
         ],
+        "summary": "Get token",
+        "description": "Return token for a user",
+        "operationId": "GetToken",
         "responses": {
           "200": {
             "description": "OK",
@@ -1057,7 +1060,7 @@
   ],
   "tags": [
     {
-      "name": "BankApi.Service.Beta"
+      "name": "OAuth"
     },
     {
       "name": "Supervisory"
